test/org/midica/testfiles/failing/eff-flow-broken-by-note.midica
INCLUDE inc/instruments.midica


0: vol.wait().set(50)
0: c
0: .wait.set(50)

